# R2D2

./: README.md  test_label_length.schema.r2d2  test_size.schema.r2d2
r2d2/: .gitignore  Cargo.toml  README_TESTING.md  output
r2d2/data/: empty.r2d2  test
r2d2/src/: bptree.rs  csv_to_r2d2.py  database.rs  graph_file_sizes.py  lib.rs  main.rs  old_main.rs  queries  worse.rs
r2d2/src/old/: bad.rs  bptree.rs
r2d2/tests/: api_tests.rs  database_tests.rs  serialization_tests.rs  test.schema.r2d2
