[package]
name = "r2d2p2"
version = "0.1.0"
edition = "2021"

# Define both a binary and a library target
[[bin]]
name = "r2d2p2"
path = "src/main.rs"

[lib]
name = "r2d2p2"
path = "src/lib.rs"

[dependencies]
bplustree = "0.1.0"
bson = "2.13.0"
http = "1.2.0"
chrono = "0.4.38"
sanitize-filename = "0.6.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_any = "0.5.0"
log = "0.4.22"